--- a/app/views/dd-ondemand/direct-debit-payment-1.html
+++ b/app/views/dd-ondemand/direct-debit-payment-1.html
@@ -9,7 +9,7 @@
 <main id="content" role="main">
 
 	<div class="back">
-		<a href="apply-pay-amount" class="link-back">Back</a>
+		<a href="confirm-details" class="link-back">Back</a>
 	</div>
 
 <div class="grid-row">
