--- a/app/views/dd-ondemand/apply-start.html
+++ b/app/views/dd-ondemand/apply-start.html
@@ -12,14 +12,15 @@
    <div class="column-two-thirds">
   	<h1 class="heading-large">Use Direct Debit to pay the Dartford Crossing charge (Dart Charge)</h1>
 			
-			<p>[Copy here from Mark explaining how it works.]</p>
-			<p>They set up an open mandate, every month a variable amount is taken based on how many times they used the Dartford Crossing</p>
+			<p>You can pay the Dartford Crossing charge by variable Direct Debit.</p>
+			<p>This means your monthly payment can go up or down depending on how many times you are charged.</p>
 
 			<div class="panel panel-border-wide">
-				<p>Price per crossing: <br> <span class="heading-xlarge">£2.50</span></p>	
+				<p>Charge per crossing: <br> <span class="heading-xlarge">£2.50</span></p>	
 			</div>
 
-      <p>Payments are taken via Direct Debit on the 1st of every month.</p>
+      <p>Payments are taken via Direct Debit on the last working day of every month.</p>
+      <p>We will notify you by email 3 days before each future payment.</p>
   		
       <div class="form-group mt3">
   			<a class="button button-start" href="apply-details" role="button">Start now</a>		 
@@ -27,7 +28,7 @@
 
        <h2 class="heading-medium">Before you start</h2>
 
-        <p>To pay using a one-off Direct Debit payment you’ll need to have the following bank details ready:</p>
+        <p>To set up a variable Direct Debit payment you’ll need to have the following bank details ready:</p>
         
         <ul class="list-bullet">
           <li>Account number</li>
@@ -35,7 +36,7 @@
           <li>Name on account</li>
         </ul>
 
-        <p class="mt4">If more than one person is required to authorise Direct Debits on the bank account you can't proceed with this online payment method. You should use a <a href="#">different payment method</a>.</p>
+        <p class="mt4">If more than one person is required to authorise Direct Debits on the bank account, you must  use a <a href="#">different payment method</a>.</p>
 	</div>	 	
 </div>
 
