--- a/app/views/dd-oneoff/direct-debit-payment-1.html
+++ b/app/views/dd-oneoff/direct-debit-payment-1.html
@@ -15,7 +15,7 @@
 <div class="grid-row">
 	<div class="column-two-thirds">
 		<h1 class="heading-large">Set up a Direct Debit</h1>
-			<p>We’ll take a one-off payment from your bank account</p>
+			<p>We’ll take a single payment from your bank account</p>
 
 			<form class="form" method="POST" action="/dd-oneoff/direct-debit-payment-2">
 		  	<div class="form-group">
