--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,13 +21,19 @@
   			</ul>
 
       <h2 class="heading-medium">
-        <a href="/dd-oneoff/direct-debit-payment-1">One off payments</a>
+        Variable payments
+      </h2>
+      <ul class="list list-bullet">
+        <li><a href="/dd-variable/apply-start">Payment summary</a></li>
+        <li><a href="/dd-variable-2/apply-start">No payment summary</a></li>
+      </ul>
+
+      <h2 class="heading-medium">
+        <a href="/dd-oneoff/direct-debit-payment-1">Single payments</a>
       </h2>
      
 
-      <h2 class="heading-medium">
-        <a href="/dd-ondemand/apply-start">On demand payments</a>
-      </h2>
+
 
 
 			</ul>
